--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@
 **private**
 .remote*
 .vs
+/config.json
+/api.json
+/config.yaml
+/openapi.json
+/openapi.yaml
 **node_modules**
 **data*.json
 *[a-zA-Z][0-9].*
 
-
-/admin
 __**
 **Copy**
 **kopie**
@@ -37,10 +40,12 @@ cert/**
 /sites
 /wav
 /aim
+/docs
 /aim-connect
 /aim-api
 /test
 /dev
 /tmp
+/admin
 /google**
 /**htaccess**
