--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "display": "fullscreen",
   "icons": [
 		{
-			"src": "img/favicon-192x192.png",
+			"src": "assets/img/icon/icon-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "img/favicon-512x512.png",
+			"src": "assets/img/icon/icon-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
